generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserStatus {
  ACTIVE
  SUSPENDED
  DELETED
}

enum ProfileStatus {
  ACTIVE
  SUSPENDED
  DEACTIVATED
}

enum RequestStatus {
  ACTIVE
  MATCHED
  COMPLETED
  CANCELLED
}

enum UrgencyLevel {
  LOW
  MEDIUM
  HIGH
}

enum OfferStatus {
  PENDING
  ACCEPTED
  DECLINED
}

enum MatchStatus {
  ACTIVE
  COMPLETED
  CANCELLED
}

enum NotificationType {
  VOLUNTEER_OFFER
  OFFER_ACCEPTED
  OFFER_DECLINED
  MATCH_CONFIRMED
  MATCH_CANCELLED
  REQUEST_UPDATED
}

model UserProfile {
  id           String        @id @default(uuid())
  name         String        @unique
  description  String?
  permissions  Json?
  isActive     Boolean       @default(true)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  userAccounts UserAccount[]

  @@map("user_profiles")
}

model UserAccount {
  id            String      @id @default(uuid())
  email         String      @unique
  password      String
  name          String
  phoneNumber   String?
  address       String?
  dateOfBirth   DateTime?
  status        UserStatus  @default(ACTIVE)
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
  userProfileId String
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id])

  // PIN-specific fields
  age                Int?
  location           String?
  accessibilityNeeds String?
  profilePhoto       String?

  // CSR Rep-specific fields
  companyName               String?
  companyRegistrationNumber String? @unique
  industry                  String?
  contactPerson             String?
  companyAddress            String?
  companyLogo               String?

  // Platform Manager-specific fields
  department String?

  // Profile status (for profile operations)
  profileStatus ProfileStatus @default(ACTIVE)

  // Relations
  notifications   Notification[]
  requests        Request[]
  shortlists      Shortlist[]
  volunteerOffers VolunteerOffer[]
  csrMatches      Match[]          @relation("CSRMatches")
  pinMatches      Match[]          @relation("PINMatches")

  @@map("user_accounts")
}

model RequestCategory {
  id          String    @id @default(uuid())
  name        String    @unique
  description String?
  iconUrl     String?
  isActive    Boolean   @default(true)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  requests    Request[]

  @@map("request_categories")
}

model Request {
  id              String           @id @default(uuid())
  pinId           String
  categoryId      String
  title           String
  description     String
  urgency         UrgencyLevel     @default(MEDIUM)
  dateNeeded      DateTime?
  location        String?
  status          RequestStatus    @default(ACTIVE)
  viewCount       Int              @default(0)
  shortlistCount  Int              @default(0)
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  pin             UserAccount      @relation(fields: [pinId], references: [id], onDelete: Cascade)
  category        RequestCategory  @relation(fields: [categoryId], references: [id])
  shortlists      Shortlist[]
  volunteerOffers VolunteerOffer[]
  match           Match?

  @@map("requests")
}

model Shortlist {
  id        String      @id @default(uuid())
  csrRepId  String
  requestId String
  createdAt DateTime    @default(now())
  csrRep    UserAccount @relation(fields: [csrRepId], references: [id], onDelete: Cascade)
  request   Request     @relation(fields: [requestId], references: [id], onDelete: Cascade)

  @@unique([csrRepId, requestId])
  @@map("shortlists")
}

model VolunteerOffer {
  id        String      @id @default(uuid())
  csrRepId  String
  requestId String
  message   String?
  status    OfferStatus @default(PENDING)
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  csrRep    UserAccount @relation(fields: [csrRepId], references: [id], onDelete: Cascade)
  request   Request     @relation(fields: [requestId], references: [id], onDelete: Cascade)

  @@map("volunteer_offers")
}

model Match {
  id                 String      @id @default(uuid())
  requestId          String      @unique
  csrRepId           String
  pinId              String
  status             MatchStatus @default(ACTIVE)
  matchedAt          DateTime    @default(now())
  completedAt        DateTime?
  cancellationReason String?
  updatedAt          DateTime    @updatedAt
  request            Request     @relation(fields: [requestId], references: [id], onDelete: Cascade)
  csrRep             UserAccount @relation("CSRMatches", fields: [csrRepId], references: [id], onDelete: Cascade)
  pin                UserAccount @relation("PINMatches", fields: [pinId], references: [id], onDelete: Cascade)

  @@map("matches")
}

model Notification {
  id        String           @id @default(uuid())
  userId    String
  type      NotificationType
  message   String
  isRead    Boolean          @default(false)
  createdAt DateTime         @default(now())
  user      UserAccount      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("notifications")
}
