@startuml Sprint3_Class_Diagram

!define ENTITY_COLOR #E8F5E9
!define RELATION_COLOR #90CAF9

skinparam class {
    BackgroundColor ENTITY_COLOR
    BorderColor #4CAF50
    ArrowColor RELATION_COLOR
}


title Sprint 3: Request Management & Shortlisting

' ====================
' ENUMS
' ====================





' ====================
' CORE ENTITIES
' ====================

class UserAccount {
    - id: UUID
    - email: String {unique}
    - password: String
    - name: String
    - phoneNumber: String
    - address: String
    - dateOfBirth: Date
    - status: UserStatus
    - userProfileId: UUID
    - createdAt: DateTime
    - updatedAt: DateTime
    - age: Integer
    - location: String
    - accessibilityNeeds: String
    - profilePhoto: String
    - companyName: String
    - companyRegistrationNumber: String {unique}
    - industry: String
    - contactPerson: String
    - companyAddress: String
    - companyLogo: String
    - department: String
    - profileStatus: ProfileStatus
    --
    ' Instance methods (actually used)
    + getRole(): String
    + toJSON(): Object
    --
    ' Static CRUD methods
    {static} + findAll(page, limit): UserAccount[]
    {static} + findById(id: UUID): UserAccount
    {static} + findByEmail(email: String): UserAccount
    {static} + login(email, password): LoginResult
    {static} + findByProfileName(name: String): UserAccount[]
    {static} + create(data: Object): UserAccount
    {static} + update(id: UUID, data: Object): UserAccount
    {static} + count(): Number
    {static} + search(query, page, limit): UserAccount[]
}

class UserProfile {
    - id: UUID
    - name: String {unique}
    - description: String
    - permissions: JSON
    - isActive: Boolean
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Static methods only (no instance methods used)
    {static} + findAll(): UserProfile[]
    {static} + findById(id: UUID): UserProfile
    {static} + findByName(name: String): UserProfile
    {static} + create(data: Object): UserProfile
    {static} + update(id: UUID, data: Object): UserProfile
    {static} + count(): Number
    {static} + search(query, isActive): UserProfile[]
}

class RequestCategory {
    - id: UUID
    - name: String {unique}
    - description: String
    - iconUrl: String
    - isActive: Boolean
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Static methods only (no instance methods used)
    {static} + findAll(): RequestCategory[]
    {static} + findActive(): RequestCategory[]
    {static} + findById(id: UUID): RequestCategory
    {static} + create(data: Object): RequestCategory
    {static} + update(id: UUID, data: Object): RequestCategory
    {static} + delete(id: UUID): Boolean
    {static} + search(query, includeInactive): RequestCategory[]
    {static} + count(): Number
}

' ====================
' NEW IN SPRINT 3
' ====================

class Request {
    - id: UUID
    - pinId: UUID
    - categoryId: UUID
    - title: String
    - description: String
    - urgency: UrgencyLevel
    - dateNeeded: DateTime
    - location: String
    - status: RequestStatus
    - viewCount: Integer
    - shortlistCount: Integer
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Instance method (for serialization)
    + toJSON(): Object
    --
    ' Static methods
    {static} + findById(id: UUID): Request
    {static} + searchByPIN(pinId, query, status, categoryId, urgency): Request[]
    {static} + findByStatus(status, page, limit): Request[]
    {static} + findCompletedByPIN(pinId, query): Request[]
    {static} + create(data: Object): Request
    {static} + update(id: UUID, data: Object): Request
    {static} + delete(id: UUID): Boolean
    {static} + count(): Number
    {static} + countByStatus(status): Number
    {static} + search(query, status, urgency, categoryId, page, limit): Request[]
    {static} + incrementViewCountDB(id: UUID): void
    {static} + incrementShortlistCountDB(id: UUID): void
    {static} + getViewCount(pinId, requestId): Number
    {static} + getShortlistCount(pinId, requestId): Number
}

class Shortlist {
    - id: UUID
    - csrRepId: UUID
    - requestId: UUID
    - createdAt: DateTime
    --
    ' Static methods only (no instance methods used)
    {static} + findById(id: UUID): Shortlist
    {static} + getShortlistedRequestIds(csrRepId): String[]
    {static} + create(data: Object): Shortlist
    {static} + deleteByCSRRepAndRequest(csrRepId, requestId): Boolean
    {static} + exists(csrRepId, requestId): Boolean
    {static} + search(csrRepId, query): Shortlist[]
}

' ====================
' RELATIONSHIPS
' ====================

' Core relationships from previous sprints
UserProfile "1" -- "0..*" UserAccount : has >

' Request relationships (NEW)
RequestCategory "1" -- "0..*" Request : categorizes >
UserAccount "1" -- "0..*" Request : creates (PIN role) >

' Shortlist relationships (NEW)
UserAccount "1" -- "0..*" Shortlist : saves (CSR role) >
Request "1" -- "0..*" Shortlist : saved by >

@enduml
